WEB-11629: Fix toolbar spacing for webcat.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -12665,7 +12665,6 @@ input[type="radio"].resolution_radio_button {
 }
 // webcat - 1950px below is our current "widest" breakpoint
 @media (min-width: 1950px) {
-
   #webcat-index-toolbar {
     .toolbar-button {
       background-position: 4px 6px;
@@ -12677,11 +12676,13 @@ input[type="radio"].resolution_radio_button {
     }
   }
 }
-@media (max-width: 1951px)  {
+
+@media (max-width: 2042px)  {
   #webcat-index-toolbar .toolbar-button-text {
     display: none !important;
   }
 }
+
 @media screen and (max-width: 1800px) and (min-width: 1705px){
   #webcat-index-toolbar .toolbar-button-text {
     .toolbar-button {
